[tool.poetry]
name = "prominence"
version = "0.1.0"
description = ""
authors = ["christoffer-hk <christofferhk@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
ruff = "^0.5.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=120

[tool.ruff.lint]
extend-select = [
    "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
